test/expected/declare_stctor.out
declare C as static constructor
        ^
9: error: constructors can not be "static"
